# pRNN

./: .gitignore  .gitmodules  .readthedocs.yaml  BasicAnalysis.ipynb  README.md  RinB_tutorial.ipynb  TCA tutorial 2.ipynb  ValueNeuron.py  analysis 2.ipynb  analysis.ipynb  analysis_pipeline.ipynb  cheeseboardenv 2.ipynb  cheeseboardenv.ipynb  generate_views.py  goal_analysis.ipynb  hyperparam_panel 2.py  justfile  load_venv.sh  make_venv.sh  pRNN.sh  pyproject.toml  run_pipeline.py  run_pipeline.sbatch  setup.py  test 2.ipynb  test 2.py  test_vae 2.py  testing.ipynb  testing.py  trainNet.py  train_vae.py  tutorial.ipynb  tutorial.py
${SLURM_TMPDIR}/MiniGrid-LRoom-18x18-v0-RandomActionAgent/1/: act.npy  obs.npy
${SLURM_TMPDIR}/MiniGrid-LRoom-18x18-v0-RandomActionAgent/10/: act.npy  (+1 more)
analysis/: DiffusionReplayAnalysis.py  ExperienceReplayAnalysis.py  ObjectMemoryTask.py  OfflineActivityAnalysis.py  OfflineTrajectoryAnalysis.py  RepresentationalConnectivityAnalysis.py  SpatialTuningAnalysis.py  decodeAnalysis.py  representationalGeometryAnalysis.py
docs/: attributions.rst  basic_analysis.rst  conf.py  dataloader.rst  index.rst  models.rst  quickstart.rst  requirements.txt  test1.rst  test2.rst  training_nets.rst
docs/api/: modules.rst  prnn.analysis.rst  prnn.environments.Miniworld.rst  prnn.environments.rst  prnn.examples.Miniworld.rst  prnn.examples.rst  prnn.rst  prnn.utils.rst
docs/tutorials/: index.rst  masked.rst  next_step.rst  rollout.rst  sparse_ln.rst
docs/utils/: Architectures.rst  index.rst  predictiveNet.rst  thetaRNN.rst
examples/: BasicAnalysis.ipynb  BasicAnalysis.py  RatEnvironment.py  quickstart.ipynb  testTrainNet.py  trainNet.py  trainNetVectorized.py  tutorial.ipynb  tutorial.py  unity_tutorial.ipynb
examples/Miniworld/: VAE.py
logs/: prnn_918534.out  prnn_922026.out  prnn_922404.err  prnn_922469.err  prnn_922469.out  prnn_923500.out  prnn_923563.err  prnn_923563.out  prnn_923578.out
prnn/: cheeseboardenv 2.ipynb  trainNet.py
prnn/analysis/: DiffusionReplayAnalysis.py  ExperienceReplayAnalysis.py  ObjectMemoryTask.py  OfflineActivityAnalysis.py  OfflineTrajectoryAnalysis.py  RepresentationalConnectivityAnalysis.py  SpatialTuningAnalysis.py  TuningCurveAnalysis.py  decodeAnalysis.py  representationalGeometryAnalysis.py  trajectoryAnalysis.py
prnn/config/: default.yaml  training.yaml
prnn/environments/: AliasRoom.py  AlternationRoom_LoopMod.py  DonutRoom.py  LinearToneRoom.py  LoopRoom.py  LoopTrack.py  Lroom.py  RatEnvironment.py  TRoom.py  WallRoom.py
prnn/examples/: Lroom.py  RatEnvironment.py  dataloader_example.ipynb
prnn/utils/: ActionEncodings.py  Architectures.py  ArchitecturesReformat.py  CANNNet.py  CANNtools.py  LayerNormRNN.py  LinearDecoder.py  OldArchitectures.py  RandomBatchedActionSequencesAgent.py  Shell.py  ShellVectorized.py  __init__.py  agent.py  ckpts.py  data.py  df.ipynb  eg_utils.py  encoder.py  encoder_pretraining.py  enums.py  env.py  figures.py  general.py  lossFuns.py  plotUtils.py  predictiveNet.py  predictiveNetReformat.py  predictiveNetVectorized.py  pyPractice.py  pytorchInits.py  thetaRNN.py  thetaRNNReformat.py
test/: divnorm_parameter_sweep.csv  sparsity_test.ipynb  test_div_norm.ipynb  test_env.py  test_imports.py
tests/: conftest.py  test.py  test_imports.py  test_predictivenet.py  test_trainnet.py
tutorials/: LN20250430_LogNOrthorgonalization 2.ipynb  LN20250502_LogNOrthorgonalization.ipynb  RiaBAnalysis 2.ipynb
utils/: ActionEncodings.py  Architectures.py  CANNNet.py  Shell.py  agent.py  env.py  figures.py  predictiveNet.py
(+20503 files in other folders)
